# SummonerRift

./: CMakeLists.txt  Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Rift.cpp  Texture2D.cpp  Texture2D.h
models/: darius.mtl
shaders/: lighting_dir.frag
